Fix answer linking

--- a/.answers/.ANSWER1.md
+++ b/.answers/.ANSWER1.md
@@ -21,4 +21,4 @@ which is not the same as the original stream.
 
 This answer is probably the most obvious. Can you think of other answers?
 
-**Answer 2:** [here](./.answers/.ANSWER2.md) 
+**Answer 2:** [here](./.ANSWER2.md) 
