--- a/.answers/.ANSWER2.md
+++ b/.answers/.ANSWER2.md
@@ -19,4 +19,4 @@ which encodes to the empty stream:
 ```
 which is not the same as the original stream.
 
-**Answer 3:** [here](./.answers/.ANSWER3.md) 
+**Answer 3:** [here](./.ANSWER3.md) 
