--- a/.answers/.ANSWER3.md
+++ b/.answers/.ANSWER3.md
@@ -19,4 +19,6 @@ which encodes to:
 ```
 which is not the same as the original stream.
 
-**Answer 4:** [here](./.answers/.ANSWER4.md) 
+The following answer is pretty nasty. If you need it, here's a [hint](./.HINT4.md).
+
+**Answer 4:** [here](./.ANSWER4.md) 
