--- a/.answers/.HINT4.md
+++ b/.answers/.HINT4.md
@@ -2,4 +2,4 @@
 
 Try staring at the [implementation](../encode/src/main/java/functions/Encode.java) of `Encode` and dig into the underlying Reactor behaviour.
 
-If you're still stuck, take a look at the original [Strong hint](../decode/src/test/java/functions/DecodeTests.java).
+If you're still stuck, here's a stronger [hint](../encode/src/test/java/functions/EncodeTests.java).
