--- a/.answers/.ANSWER4.md
+++ b/.answers/.ANSWER4.md
@@ -19,4 +19,4 @@ which, perhaps surprisingly, encodes to:
 ```
 which is not the same as the original stream.
 
-**Other answer?:** if you are sure you've found another distinct class of answer, please submit a pull request! 
+**Other answers?:** if you are sure you've found another distinct class of answer, please submit a pull request! 
