Add integration tests
Also mention the relevant integration tests in the puzzle answers.

--- a/.answers/.ANSWER1.md
+++ b/.answers/.ANSWER1.md
@@ -1,7 +1,7 @@
-# Answer 1: decode failure
+# Answer 1: decode and encode failures
 
 `Decode` followed by `Encode` does not produce the original stream of integers when the input stream cannot
-be decoded. For example
+be decoded. For example, an odd number of items in the input stream cannot be decoded and so:
 
 ```
 < 0 >
@@ -18,6 +18,27 @@ which, in turn, encodes to the following stream:
 
 ```
 which is not the same as the original stream.
+
+This is tested by `testCountWithNoValue` in
+[DecodeEncodeRoundTripTests.java](../tests/src/test/java/integration/DecodeEncodeRoundTripTests.java).
+
+
+Another example of a decode failure involves a negative count:
+```
+<2, 1, -1, 0>
+```
+decodes to:
+```
+<1, 1 ^
+```
+which, perhaps surprisingly, encodes to:
+```
+< ^
+```
+ 
+This is tested by `testNegativeCount` in
+[DecodeEncodeRoundTripTests.java](../tests/src/test/java/integration/DecodeEncodeRoundTripTests.java).
+
 
 This answer is probably the most obvious. Can you think of other answers?
 
