--- a/.answers/.ANSWER2.md
+++ b/.answers/.ANSWER2.md
@@ -19,4 +19,7 @@ which encodes to the empty stream:
 ```
 which is not the same as the original stream.
 
+This is tested by `testDegenerateRun` in
+[DecodeEncodeRoundTripTests.java](../tests/src/test/java/integration/DecodeEncodeRoundTripTests.java). 
+
 **Answer 3:** [here](./.ANSWER3.md) 
