--- a/.answers/.ANSWER3.md
+++ b/.answers/.ANSWER3.md
@@ -1,4 +1,4 @@
-# Answer 3
+# Answer 3: consecutive runs for the same value
 
 Similar to answer 2, `Decode` followed by `Encode` does not produce the original stream of integers
 when the input stream contains two or more consecutive runs for the same value. For example
@@ -18,6 +18,9 @@ which encodes to:
 
 ```
 which is not the same as the original stream.
+
+This is tested by `testDoubleRun` in
+[DecodeEncodeRoundTripTests.java](../tests/src/test/java/integration/DecodeEncodeRoundTripTests.java). 
 
 The following answer is pretty nasty. If you need it, here's a [hint](./.HINT4.md).
 
