--- a/.answers/.ANSWER4.md
+++ b/.answers/.ANSWER4.md
@@ -1,13 +1,15 @@
-# Answer 4
+# Answer 4: encode aborted by error
 
-This is a nasty side-effect of the implementation of `Encode`. `Decode` followed by `Encode`
-does not produce the original stream of integers when `Encode` is aborted by an error from `Decode`. For example:
+This is a nasty side-effect of the implementation of `Encode` which was somewhat glossed over in the
+second example of [Answer 1](./.ANSWER1.md). `Decode` followed by `Encode`
+does not produce the original stream of integers when `Encode` is aborted by an error from `Decode`.
+For example (where `^` denotes error termination):
 
 ```
-< 2, 1, 0 >
+< 2, 1, ^
 
 ```
-decodes to the following stream ((where `^` denotes error termination)):
+decodes to the following stream:
 ```
 < 1, 1 ^
 
@@ -18,5 +20,8 @@ which, perhaps surprisingly, encodes to:
 
 ```
 which is not the same as the original stream.
+
+This is tested by `testEncodeAbortedByError` in
+[DecodeEncodeRoundTripTests.java](../tests/src/test/java/integration/DecodeEncodeRoundTripTests.java). 
 
 **Other answers?:** if you are sure you've found another distinct class of answer, please submit a pull request! 
