--- a/.answers/.ANSWER4.md
+++ b/.answers/.ANSWER4.md
@@ -1,7 +1,6 @@
 # Answer 4: encode aborted by error
 
-This is a nasty side-effect of the implementation of `Encode` which was somewhat glossed over in the
-second example of [Answer 1](./.ANSWER1.md). `Decode` followed by `Encode`
+This is a nasty side-effect of the implementation of `Encode`. `Decode` followed by `Encode`
 does not produce the original stream of integers when `Encode` is aborted by an error from `Decode`.
 For example (where `^` denotes error termination):
 
