Document some edge cases for completeness

--- a/.answers/.ANSWER1.md
+++ b/.answers/.ANSWER1.md
@@ -1,4 +1,4 @@
-# Answer 1: decode and encode failures
+# Answer 1: decode failures
 
 `Decode` followed by `Encode` does not produce the original stream of integers when the input stream cannot
 be decoded. For example, an odd number of items in the input stream cannot be decoded and so:
