--- a/.answers/.ANSWER3.md
+++ b/.answers/.ANSWER3.md
@@ -20,7 +20,11 @@ which encodes to:
 which is not the same as the original stream.
 
 This is tested by `testDoubleRun` in
-[DecodeEncodeRoundTripTests.java](../tests/src/test/java/integration/DecodeEncodeRoundTripTests.java). 
+[DecodeEncodeRoundTripTests.java](../tests/src/test/java/integration/DecodeEncodeRoundTripTests.java).
+
+Another example of this answer uses consecutive runs of the same value with a total count larger than the
+maximum positive integer in Java, but this would be difficult to test: it would either take too long or run out of
+memory.
 
 The following answer is pretty nasty. If you need it, here's a [hint](./.HINT4.md).
 
