--- a/.answers/.ANSWER4.md
+++ b/.answers/.ANSWER4.md
@@ -1,7 +1,7 @@
-# Answer 4: encode aborted by error
+# Answer 4: encode failure
 
-This is a nasty side-effect of the implementation of `Encode`. `Decode` followed by `Encode`
-does not produce the original stream of integers when `Encode` is aborted by an error from `Decode`.
+A [bug](https://github.com/projectriff-samples/java-run-length-encoding/issues/2) in the implementation of `Encode` gives rise to another case where `Decode` followed by `Encode`
+does not produce the original stream of integers.
 For example (where `^` denotes error termination):
 
 ```
