Refere to edge cases

--- a/.answers/.ANSWER4.md
+++ b/.answers/.ANSWER4.md
@@ -23,4 +23,4 @@ which is not the same as the original stream.
 This is tested by `testEncodeAbortedByError` in
 [DecodeEncodeRoundTripTests.java](../tests/src/test/java/integration/DecodeEncodeRoundTripTests.java). 
 
-**Other answers?:** if you are sure you've found another distinct class of answer, please submit a pull request! 
+**Other answers?:** if you are sure you've found another distinct class of answer, apart from the [known edge cases](./.EDGE_CASES.md), please submit a pull request! 
