Document another edge case

--- a/.answers/.ANSWER2.md
+++ b/.answers/.ANSWER2.md
@@ -22,4 +22,6 @@ which is not the same as the original stream.
 This is tested by `testDegenerateRun` in
 [DecodeEncodeRoundTripTests.java](../tests/src/test/java/integration/DecodeEncodeRoundTripTests.java). 
 
+But, we're not done yet. Can you think of another answer?
+
 **Answer 3:** [here](./.ANSWER3.md) 
