--- a/.answers/.ANSWER3.md
+++ b/.answers/.ANSWER3.md
@@ -26,6 +26,6 @@ Another example of this answer uses consecutive runs of the same value with a to
 maximum positive integer in Java, but this would be difficult to test: it would either take too long or run out of
 memory.
 
-The following answer is pretty nasty. If you need it, here's a [hint](./.HINT4.md).
+The final answer is pretty obscure. If you need it, here's a [hint](./.HINT4.md).
 
 **Answer 4:** [here](./.ANSWER4.md) 
