--- a/.answers/.EDGE_CASES.md
+++ b/.answers/.EDGE_CASES.md
@@ -1,5 +1,7 @@
 # Edge cases
 `Encode` followed by `Decode` does not produce the original stream of integers in the following edge cases:
-1. In some cases where the input stream ends in error (see [issue 2](https://github.com/projectriff-samples/java-run-length-encoding/issues/2)).
-2. When the size of a run exceeds the maximum value of the integer type used in the implementation.
-3. When `Encode` or `Decode` runs out of memory.
+1. When a non-empty input stream "hangs", i.e. when no more items are added to the input stream
+and the stream does not terminate.
+2. In some cases where the input stream ends in error (see [issue 2](https://github.com/projectriff-samples/java-run-length-encoding/issues/2)).
+3. When the size of a run exceeds the maximum value of the integer type used in the implementation.
+4. When `Encode` or `Decode` runs out of memory.
