--- a/.answers/.HINT4.md
+++ b/.answers/.HINT4.md
@@ -1,5 +1,5 @@
 # Hint about another answer
 
-Try staring at the [implementation](../encode/src/main/java/functions/Encode.java) of `Encode` and dig into the underlying Reactor behaviour.
+Try staring at the [implementation](../encode/src/main/java/functions/Encode.java) of `Encode` and investigate the underlying Reactor behaviour.
 
 If you're still stuck, here's a stronger [hint](../encode/src/test/java/functions/EncodeTests.java).
