--- a/.answers/.ANSWER4.md
+++ b/.answers/.ANSWER4.md
@@ -5,7 +5,7 @@ does not produce the original stream of integers.
 For example (where `^` denotes error termination):
 
 ```
-< 2, 1, ^
+< 2, 1 ^
 
 ```
 decodes to the following stream:
@@ -23,4 +23,4 @@ which is not the same as the original stream.
 This is tested by `testEncodeAbortedByError` in
 [DecodeEncodeRoundTripTests.java](../tests/src/test/java/integration/DecodeEncodeRoundTripTests.java). 
 
-**Other answers?:** if you are sure you've found another distinct class of answer, apart from the [known edge cases](./.EDGE_CASES.md), please submit a pull request! 
+**Other answers?:** if you are sure you've found another distinct class of answer, which do not involve the [known edge cases](./.EDGE_CASES.md), please submit a pull request! 
